--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -4,9 +4,9 @@
   text-align: left;
 }
 
-img {
+.icon {
   max-width: 100%;
-  height: auto;
+  height: 100%;
   border: 1px solid #f2f2f2;
   box-sizing: border-box;
   border-radius: 5px;
